--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.6",
+    "filepond": "^4.7.2",
+    "filepond-plugin-image-preview": "^4.4.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-filepond": "^7.0.1",
+    "react-pdf": "^4.1.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
